--- a/General/footer.css
+++ b/General/footer.css
@@ -1,3 +1,7 @@
+@font-face{
+    font-family:Open-sans;
+    src: url("../resources/image/OpenSans-ExtraBold.ttf");
+}
 #footer {
     position: fixed;
     left: 0;
@@ -8,25 +12,46 @@
 }
 
 #btn1{
+    font-family: Open-sans;
+    border-radius: 100px;
     position: absolute;
     left: 0;
-    margin: 10px;
-    margin-left: 30px;
+    bottom: 50px;
+    width: 200px;
+    height:40px;
+    outline: none;
+    margin-left: 50px;
 }
 #btn2{
+    font-family: Open-sans;
+    border-radius: 100px;
     position: absolute;
     right: 0;
-    margin: 10px;
-    margin-right: 30px;
+    bottom: 50px;
+    width: 200px;
+    height:40px;
+    outline: none;
+    margin-right: 50px;
 }
 #about{
+    border-radius: 100px 100px 0px 0px;
     position: fixed;
     left: 0;
     bottom: 0;
     width: 100%;
-    height: 75px;
+    height: 125px;
+    font-family: Open-sans;
     text-align: center;
     background-color: grey;
-    color: white;
+    color: black;
+}
+.Apartat{
+    font-size: 15px;
+    padding-top: 20px;
+    padding-right: 100px;
+    padding-left: 100px;
+}
+.Contingut{
+    font-size: 11px;
 }
 
