--- a/General/header.css
+++ b/General/header.css
@@ -1,5 +1,26 @@
-#Logo{
-    position: absolute;
-    right: 10%;
-    height: 10%;
+img{
+    width: 180px;
+    margin-top: 30px;
+    margin-left: 100;
+}
+li{
+    float: left;
+    list-style: none;
+    padding: 10px;
+}
+li:hover a{
+    color: black;
+}
+nav{
+    float: right;
+    margin-top: 50px;
+    margin-left: 150px;
+}
+a{
+    text-decoration: none;
+    font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    color: darkblue;
+}
+header{
+    background: aquamarine;
 }
