--- a/css/landing.css
+++ b/css/landing.css
@@ -5,7 +5,7 @@ body, html {
   
 .Background{
     /* The image used */
-    background-image: url("../resources/image/IMG_20191023_095042.jpg");
+    background-image: url("../src/img/LandingBackground.jpg");
   
     /* Full height */
     height: 100%;
@@ -14,6 +14,7 @@ body, html {
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
+    position: relative;
 }
 #Titol{
     margin: 0;
