implementat el carrito de la compra

--- a/css/estils.css
+++ b/css/estils.css
@@ -243,7 +243,10 @@ img {vertical-align: middle;}
 
 .menuImg{
     height: 100px;
-    width: 100px;
+    width: 100px;    
+}
+td{
+    text-align: center;
 }
 th{
     height: 50px;
