--- a/css/estils.css
+++ b/css/estils.css
@@ -308,14 +308,25 @@ img {vertical-align: middle;}
 }
 
 /*Menu*/
-
+#vaciar{
+  font-family: Open-sans;
+  padding: 0;
+  border: none;
+  outline: none;
+  border-radius: 100px;
+  height: 30px;
+  width: 60px;
+  margin-top: 40px;
+}
+.titolMenu{
+  font-size: 50px;
+}
 #pati{
     display: none;  
 }
 #migdia{
     display: none;   
 }
-
 .botonMas{
     padding: 0;
     border: none;
@@ -335,7 +346,9 @@ img {vertical-align: middle;}
 
 .menuImg{
     height: 150px;
-    width: 150px;    
+    width: 150px;  
+    border-radius: 50px;  
+    margin-bottom: 20px;
 }
 .tdMenu{
     text-align: center;
@@ -349,10 +362,23 @@ th{
     float: left;
     width: 50%;
     padding: 10px;
+    
 }
 .fila:after{
     display: table;
     clear: both;
+}
+#carrito{
+  text-align: center;
+  font-size: 20px;
+}
+#divTotal{
+  text-align: center;
+  font-size: 30px;
+}
+#h1Carrito{
+  text-align: center;
+  font-size: 50px;
 }
 /*error style */
 .bodyerror {
