--- a/css/estils.css
+++ b/css/estils.css
@@ -454,21 +454,6 @@ form input[type="email"]{
 	display:inline-block;
 }
 
-form input[type="submit"]{
-	width:100%;
-	padding:8px 16px;
-	margin-top:32px;
-	border:1px solid #000;
-	border-radius:5px;
-	display:block;
-	color:#fff;
-	background-color:#000;
-} 
-
-form input[type="submit"]:hover{
-	cursor:pointer;
-}
-
 textarea{
 	width:100%;
 	height:100px;
@@ -502,3 +487,29 @@ textarea{
   display: inline-block;
 }
 
+/* Final.php */
+
+#generalFinal{
+  margin-top:  5%;  
+}
+
+#pFinal{
+  margin-top: 40px;
+  font-size: 30px;
+  text-align: center;
+}
+
+#h1Final{
+  margin: 0;
+  text-align: center;
+  font-size: 60px;
+}
+
+#h3Final{
+  font-size: 30px;
+  text-align: center;
+}
+#ulFinal{
+  margin-left: 40%;
+  font-size: 25px;
+}
