--- a/css/estils.css
+++ b/css/estils.css
@@ -22,6 +22,92 @@ body {
     flex: 1;
 }
 
+/*productes*/
+.fotoLlista{
+  width: 100px;
+  height:100px; 
+}
+#divCampsModificar{
+  text-align: center;
+}
+#titolModificarProductes{
+  text-align: center;
+}
+.inputsProducte{
+  width:200px;
+	padding:3px 10px;
+	border:1px solid #f6f6f6;
+	border-radius:3px;
+	background-color:#f6f6f6;
+	margin:8px 0;
+	display:inline-block;
+}
+#navProductes #ulProductes{
+  width: 350px;
+  overflow:hidden; 
+  overflow-y:scroll;
+  padding: 0;
+}
+#columnaAfegir{
+  text-align: center;
+}
+.labelsProducte{
+  width:172px;
+  margin: 5px;
+  text-align: left;
+}
+#output{
+  width: 100px;
+  height: 100px;
+  display: none;
+  border-radius: 35px;
+}
+#labelNom{
+  font-size: 10px;
+}
+#labelPreu{
+  font-size: 10px;
+}
+#h3Previsualitzacio{
+  display: none;
+}
+.btnAfegirProducte{
+    border: none;
+    background: none;
+    font-family: Open-sans;
+    color: black;
+    background-color: white;
+    border-radius: 100px;
+    width: 150px;
+    height:30px;
+    outline: none;
+}
+.btnModificarProducte{
+  border: none;
+  background: none;
+  font-family: Open-sans;
+  color: black;
+  background-color: white;
+  border-radius: 100px;
+  width: 300px;
+  height:30px;
+  outline: none;
+}
+
+
+/*landing staff*/
+#divLandingStaff{
+  text-align: center;
+
+}
+
+.imgLandingStaff{
+  margin-top: 100px;
+  height: 200px;
+  width: 200px;
+  border-radius: 100px;
+}
+
 /*Footer*/
 
 #footer {
@@ -443,7 +529,7 @@ form label{
 	display:inline-block;
 }
 
-form input[type="text"],
+.inputComanda,
 form input[type="email"]{
 	width:350px;
 	padding:3px 10px;
