--- a/css/estils.css
+++ b/css/estils.css
@@ -1,88 +1,101 @@
 /*Import Open-Sans*/
 
-@font-face{
-    font-family:Open-sans;
-    src: url("../src/OpenSans.ttf");
+@font-face {
+  font-family: Open-sans;
+  src: url("../src/OpenSans.ttf");
 }
 
 /*Estils comuns*/
 
 html {
-    height: 100%;
-    font-family: Open-sans;
+  height: 100%;
+  font-family: Open-sans;
 }
-  
+
 body {
-    background-color: #a8e9ff;
-    display: flex;
-    flex-direction: column;
-    min-height: 100%;
+  background-color: #a8e9ff;
+  display: flex;
+  flex-direction: column;
+  min-height: 100%;
 }
+
 #content {
-    flex: 1;
+  flex: 1;
 }
 
 /*productes*/
-.fotoLlista{
+.fotoLlista {
   width: 100px;
-  height:100px; 
+  height: 100px;
 }
-#divCampsModificar{
+
+#divCampsModificar {
   text-align: center;
 }
-#titolModificarProductes{
+
+#titolModificarProductes {
   text-align: center;
 }
-.inputsProducte{
-  width:200px;
-	padding:3px 10px;
-	border:1px solid #f6f6f6;
-	border-radius:3px;
-	background-color:#f6f6f6;
-	margin:8px 0;
-	display:inline-block;
+
+.inputsProducte {
+  width: 200px;
+  padding: 3px 10px;
+  border: 1px solid #f6f6f6;
+  border-radius: 3px;
+  background-color: #f6f6f6;
+  margin: 8px 0;
+  display: inline-block;
 }
-#navProductes #ulProductes{
+
+#navProductes #ulProductes {
   width: 350px;
-  overflow:hidden; 
-  overflow-y:scroll;
+  overflow: hidden;
+  overflow-y: scroll;
   padding: 0;
 }
-#columnaAfegir{
+
+#columnaAfegir {
   text-align: center;
 }
-.labelsProducte{
-  width:172px;
+
+.labelsProducte {
+  width: 172px;
   margin: 5px;
   text-align: left;
 }
-#output{
+
+#output {
   width: 100px;
   height: 100px;
   display: none;
   border-radius: 35px;
 }
-#labelNom{
+
+#labelNom {
   font-size: 10px;
 }
-#labelPreu{
+
+#labelPreu {
   font-size: 10px;
 }
-#h3Previsualitzacio{
+
+#h3Previsualitzacio {
   display: none;
 }
-.btnAfegirProducte{
-    border: none;
-    background: none;
-    font-family: Open-sans;
-    color: black;
-    background-color: white;
-    border-radius: 100px;
-    width: 150px;
-    height:30px;
-    outline: none;
+
+.btnAfegirProducte {
+  border: none;
+  background: none;
+  font-family: Open-sans;
+  color: black;
+  background-color: white;
+  border-radius: 100px;
+  width: 150px;
+  height: 30px;
+  outline: none;
 }
-.btnModificarProducte{
+
+.btnModificarProducte {
   border: none;
   background: none;
   font-family: Open-sans;
@@ -90,18 +103,18 @@ body {
   background-color: white;
   border-radius: 100px;
   width: 300px;
-  height:30px;
+  height: 30px;
   outline: none;
 }
 
 
 /*landing staff*/
-#divLandingStaff{
+#divLandingStaff {
   text-align: center;
 
 }
 
-.imgLandingStaff{
+.imgLandingStaff {
   margin-top: 100px;
   height: 200px;
   width: 200px;
@@ -111,106 +124,118 @@ body {
 /*Footer*/
 
 #footer {
-    padding: 0;
-    left: 0;
-    width: 100%;
-    text-align: center;
+  padding: 0;
+  left: 0;
+  width: 100%;
+  text-align: center;
 }
 
-#btn1{
-    padding: 0;
-    border: none;
-    background: none;
-    font-family: Open-sans;
-    color: black;
-    background-color: white;
-    border-radius: 100px;
-    position: fixed;
-    left: 0;
-    bottom: 17%;
-    width: 200px;
-    height:40px;
-    outline: none;
-    margin-left: 50px;
+#btn1 {
+  padding: 0;
+  border: none;
+  background: none;
+  font-family: Open-sans;
+  color: black;
+  background-color: white;
+  border-radius: 100px;
+  position: fixed;
+  left: 0;
+  bottom: 17%;
+  width: 200px;
+  height: 40px;
+  outline: none;
+  margin-left: 50px;
 }
-#btn2{
-    padding: 0;
-    border: none;
-    background: none;
-    font-family: Open-sans;
-    color: black;
-    background-color: white;
-    border-radius: 100px;
-    position: fixed;
-    right: 0;
-    bottom: 17%;
-    width: 200px;
-    height:40px;
-    outline: none;
-    margin-right: 50px;
+
+#btn2 {
+  padding: 0;
+  border: none;
+  background: none;
+  font-family: Open-sans;
+  color: black;
+  background-color: white;
+  border-radius: 100px;
+  position: fixed;
+  right: 0;
+  bottom: 17%;
+  width: 200px;
+  height: 40px;
+  outline: none;
+  margin-right: 50px;
 }
-#taulaFooter{
-    width: 100%;
+
+#taulaFooter {
+  width: 100%;
 }
-#about{
-    bottom: 0;
-    text-align: center;
-    background-color:  #52d4ff;
-    color: black;
+
+#about {
+  bottom: 0;
+  text-align: center;
+  background-color: #52d4ff;
+  color: black;
 }
-.Apartat{
-    font-size: 15px;
-    padding-top: 20px;
-    margin-top: 10px;
+
+.Apartat {
+  font-size: 15px;
+  padding-top: 20px;
+  margin-top: 10px;
 }
-.Contingut{
-    font-size: 11px;
+
+.Contingut {
+  font-size: 11px;
 }
 
 /*Header*/
 
-#Logo{
-    width: 75px;
-    margin: 15px;
-}
-.ElementoListaHeader{
-    float: left;
-    list-style: none;
-        padding: 10px;
-     
-}
-.ListaHeader{
-    margin-right: 20px;    
-}
-.enlaceHeader aHeader{
-    color: black;
-    border-style: solid;   
-}
-#navheader{
-    float: right;
-    margin-top: 50px;
-    margin-left: 150px;
-}
-.aHeader{
-    text-decoration: none;
-    color: black;
+#Logo {
+  width: 75px;
+  margin: 15px;
 }
 
-header{
-    background-color:  #52d4ff;
+.ElementoListaHeader {
+  float: left;
+  list-style: none;
+  padding: 10px;
+
+}
+
+.ListaHeader {
+  margin-right: 20px;
+}
+
+.enlaceHeader aHeader {
+  color: black;
+  border-style: solid;
+}
+
+#navheader {
+  float: right;
+  margin-top: 50px;
+  margin-left: 150px;
+}
+
+.aHeader {
+  text-decoration: none;
+  color: black;
+}
+
+header {
+  background-color: #52d4ff;
 }
 
 /*Staff*/
-#titolStaff{
+#titolStaff {
   text-align: center;
   font-size: 80px;
   margin: 0;
 }
-.formStaff{
+
+.formStaff {
   text-align: center;
   vertical-align: bottom;
 }
-.btnStaff{
+
+.btnStaff {
   font-family: Open-sans;
   border-radius: 100px;
   padding: 0;
@@ -224,80 +249,102 @@ header{
   background-color: #52d4ff;
   vertical-align: bottom;
 }
-.inner{                  
+
+.inner {
   position: absolute;
-  bottom: 0px;  
+  bottom: 0px;
   margin-left: 55px;
 }
-.outer{
+
+.outer {
   height: 100%;
 }
-#taulaStaff{
+
+#taulaStaff {
   margin: 0 auto;
   border-spacing: 15px 15px;
 }
-.trStaff{
+
+.trStaff {
   background-color: white;
 }
-.tdStaff{
+
+.tdStaff {
   border: 2px solid black;
   border-radius: 20px;
   padding: 0;
   vertical-align: top;
   position: relative;
 }
-.contingutStaff{
+
+.contingutStaff {
   vertical-align: top;
   margin-left: 10px;
   margin-right: 10px;
   margin-bottom: 50px;
   width: 290px;
 }
+
 /*Landing*/
 
-.NomCantina{
-    font-size: 50px;
-    font-family: Open-sans;    
-    color:  white;
-    text-align: center;
-    background-color:  grey;
-    border: 10px,solid,black;
+.NomCantina {
+  font-size: 50px;
+  font-family: Open-sans;
+  color: white;
+  text-align: center;
+  background-color: grey;
+  border: 10px, solid, black;
 }
 
-.Background{
-        /* The image used */
-    background-image: url("../src/img/LandingBackground.jpg");
-  
-        /* Full height */
-    height: 100%;
-  
-        /* Center and scale the image nicely */
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    position: relative;
-}
-#Titol{
-    margin: 0;
-    color: white;
-    padding-left: 115px;
-    padding-top: 80px;
-    padding-bottom: 0;
-    font-size: 40px;
-}
-.slideImg{
-    height: 300px;
-    width: 300px;
-}
-.Punts{
-    margin-left: 170px;
-}
-* {box-sizing: border-box}
-body {margin:0}
-.mySlides {display: none}
-img {vertical-align: middle;}
+.Background {
+  /* The image used */
+  background-image: url("../src/img/LandingBackground.jpg");
 
-        /* Slideshow container */
+  /* Full height */
+  height: 100%;
+
+  /* Center and scale the image nicely */
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  position: relative;
+}
+
+#Titol {
+  margin: 0;
+  color: white;
+  padding-left: 115px;
+  padding-top: 80px;
+  padding-bottom: 0;
+  font-size: 40px;
+}
+
+.slideImg {
+  height: 300px;
+  width: 300px;
+}
+
+.Punts {
+  margin-left: 170px;
+}
+
+* {
+  box-sizing: border-box
+}
+
+body {
+  margin: 0
+}
+
+.mySlides {
+  display: none
+}
+
+img {
+  vertical-align: middle;
+}
+
+/* Slideshow container */
 .slideshow-container {
   max-width: 300px;
   position: relative;
@@ -306,8 +353,9 @@ img {vertical-align: middle;}
   margin-left: 75px;
 }
 
-        /* Next & previous buttons */
-.prev, .next {
+/* Next & previous buttons */
+.prev,
+.next {
   cursor: pointer;
   position: absolute;
   top: 50%;
@@ -322,18 +370,19 @@ img {vertical-align: middle;}
   user-select: none;
 }
 
-        /* Position the "next button" to the right */
+/* Position the "next button" to the right */
 .next {
   right: 0;
   border-radius: 3px 0 0 3px;
 }
 
-        /* On hover, add a black background color with a little bit see-through */
-.prev:hover, .next:hover {
-  background-color: rgba(0,0,0,0.8);
+/* On hover, add a black background color with a little bit see-through */
+.prev:hover,
+.next:hover {
+  background-color: rgba(0, 0, 0, 0.8);
 }
 
-        /* Caption text */
+/* Caption text */
 .text {
   color: #f2f2f2;
   font-size: 15px;
@@ -344,7 +393,7 @@ img {vertical-align: middle;}
   text-align: center;
 }
 
-        /* Number text (1/3 etc) */
+/* Number text (1/3 etc) */
 .numbertext {
   color: #f2f2f2;
   font-size: 12px;
@@ -353,7 +402,7 @@ img {vertical-align: middle;}
   top: 0;
 }
 
-        /* The dots/bullets/indicators */
+/* The dots/bullets/indicators */
 .dot {
   cursor: pointer;
   height: 15px;
@@ -365,11 +414,12 @@ img {vertical-align: middle;}
   transition: background-color 0.6s ease;
 }
 
-.active, .dot:hover {
+.active,
+.dot:hover {
   background-color: #717171;
 }
 
-        /* Fading animation */
+/* Fading animation */
 .fade {
   -webkit-animation-name: fade;
   -webkit-animation-duration: 1.5s;
@@ -378,22 +428,47 @@ img {vertical-align: middle;}
 }
 
 @-webkit-keyframes fade {
-  from {opacity: .4} 
-  to {opacity: 1}
+  from {
+    opacity: .4
+  }
+
+  to {
+    opacity: 1
+  }
 }
 
 @keyframes fade {
-  from {opacity: .4} 
-  to {opacity: 1}
+  from {
+    opacity: .4
+  }
+
+  to {
+    opacity: 1
+  }
 }
 
-        /* On smaller screens, decrease text size */
+/* On smaller screens, decrease text size */
 @media only screen and (max-width: 300px) {
-  .prev, .next,.text {font-size: 11px}
+
+  .prev,
+  .next,
+  .text {
+    font-size: 11px
+  }
 }
 
 /*Menu*/
-#vaciar{
+
+#graella {
+  display: grid;
+  grid-template-columns:
+    repeat(3, 1fr);
+  grid-gap: 10px;
+  margin: 0 5%;
+  text-align: center;
+}
+
+#vaciar {
   font-family: Open-sans;
   padding: 0;
   border: none;
@@ -403,199 +478,216 @@ img {vertical-align: middle;}
   width: 60px;
   margin-top: 40px;
 }
-.titolMenu{
+
+.titolMenu {
   font-size: 50px;
 }
-#pati{
-    display: none;  
-}
-#migdia{
-    display: none;   
-}
-.botonMas{
-    padding: 0;
-    border: none;
-    width: 25px;
-    height: 25px;
-    border-radius: 50px;
-    outline: none;
-}
-.botonMenos{
-    width: 25px;
-    height: 25px;
-    padding: 0;
-    border: none;
-    outline: none;
-    border-radius: 100px;
+
+.botonMas {
+  padding: 0;
+  border: none;
+  width: 25px;
+  height: 25px;
+  border-radius: 50px;
+  outline: none;
 }
 
-.menuImg{
-    height: 150px;
-    width: 150px;  
-    border-radius: 50px;  
-    margin-bottom: 20px;
+.botonMenos {
+  width: 25px;
+  height: 25px;
+  padding: 0;
+  border: none;
+  outline: none;
+  border-radius: 100px;
 }
-.tdMenu{
-    text-align: center;
-    height: 300px;
-    width: 300px;   
+
+.menuImg {
+  height: 150px;
+  width: 150px;
+  border-radius: 50px;
+  margin-bottom: 20px;
 }
-th{
-    height: 50px;
+
+.tdMenu {
+  text-align: center;
+  height: 300px;
+  width: 300px;
 }
-.columna{
-    float: left;
-    width: 50%;
-    padding: 10px;
-    
+
+th {
+  height: 50px;
 }
-.fila:after{
-    display: table;
-    clear: both;
+
+.columna {
+  float: left;
+  width: 50%;
+  padding: 10px;
+
 }
-#carrito{
+
+.fila:after {
+  display: table;
+  clear: both;
+}
+
+#carrito {
   text-align: center;
   font-size: 20px;
 }
-#divTotal{
+
+#divTotal {
   text-align: center;
   font-size: 30px;
 }
-#h1Carrito{
+
+#h1Carrito {
   text-align: center;
   font-size: 50px;
 }
+
 /*error style */
 .bodyerror {
-    background-color: #a8e9ff;
-    margin: 0;
-  }
-  
-  .mainboxerror {
-    background-color: #a8e9ff;
-    margin: auto;
-    width: 600px;
-  }
-  
-    .err {
-      color: #ffffff;
-      font-family: Open-sans;
-      font-size: 11rem;
-      right:  50%;
-      vertical-align: top;
-    }
-  .errorText{
-    margin-top: 40%;
-  }
-  .far {
-    font-size: 8.5rem;
-    color: #ffffff;
-  }
-  .msgerror {
-      text-align: center;
-      font-family: Open-sans;
-      font-size: 1.6rem;
-      top: 45%;
-      margin: 0;
-    }
-  
-  a {
-    text-decoration: none;
-    color: white;
-  }
-  #pError{
-    text-align: center;
-    padding-top: 100px;
-    vertical-align: top;
-  }
-  
-  a:hover {
-    text-decoration: underline;
-  }
-/*css del form  */
-*{box-sizing:border-box;}
-
-.formstyle{
-	width:300px;
-	padding:16px;
-	border-radius:10px;
-	margin:auto;
-	background-color:#ccc;
+  background-color: #a8e9ff;
+  margin: 0;
 }
 
-form label{
-	width:72px;
-	font-weight:bold;
-	display:inline-block;
+.mainboxerror {
+  background-color: #a8e9ff;
+  margin: auto;
+  width: 600px;
+}
+
+.err {
+  color: #ffffff;
+  font-family: Open-sans;
+  font-size: 11rem;
+  right: 50%;
+  vertical-align: top;
+}
+
+.errorText {
+  margin-top: 40%;
+}
+
+.far {
+  font-size: 8.5rem;
+  color: #ffffff;
+}
+
+.msgerror {
+  text-align: center;
+  font-family: Open-sans;
+  font-size: 1.6rem;
+  top: 45%;
+  margin: 0;
+}
+
+a {
+  text-decoration: none;
+  color: white;
+}
+
+#pError {
+  text-align: center;
+  padding-top: 100px;
+  vertical-align: top;
+}
+
+a:hover {
+  text-decoration: underline;
+}
+
+/*css del form  */
+* {
+  box-sizing: border-box;
+}
+
+.formstyle {
+  width: 300px;
+  padding: 16px;
+  border-radius: 10px;
+  margin: auto;
+  background-color: #ccc;
+}
+
+form label {
+  width: 72px;
+  font-weight: bold;
+  display: inline-block;
 }
 
 .inputComanda,
-form input[type="email"]{
-	width:350px;
-	padding:3px 10px;
-	border:1px solid #f6f6f6;
-	border-radius:3px;
-	background-color:#f6f6f6;
-	margin:8px 0;
-	display:inline-block;
+form input[type="email"] {
+  width: 350px;
+  padding: 3px 10px;
+  border: 1px solid #f6f6f6;
+  border-radius: 3px;
+  background-color: #f6f6f6;
+  margin: 8px 0;
+  display: inline-block;
 }
 
-textarea{
-	width:100%;
-	height:100px;
-	border:1px solid #f6f6f6;
-	border-radius:3px;
-	background-color:#f6f6f6;			
-	margin:8px 0;
-	/*resize: vertical | horizontal | none | both*/
-	resize:none;
-	display:block;
+textarea {
+  width: 100%;
+  height: 100px;
+  border: 1px solid #f6f6f6;
+  border-radius: 3px;
+  background-color: #f6f6f6;
+  margin: 8px 0;
+  /*resize: vertical | horizontal | none | both*/
+  resize: none;
+  display: block;
 }
 
 /*Comanda*/
-#h1Comanda{
+#h1Comanda {
   text-align: center;
   margin-bottom: 100px;
 }
-#h3Comanda{
+
+#h3Comanda {
   text-align: center;
   font-size: 30px;
 }
-#ComandaPasada{
+
+#ComandaPasada {
   text-align: center;
   font-size: 20px;
 }
-.label{
+
+.label {
   text-align: left;
   margin-right: 60px;
 }
-#formComanda{
+
+#formComanda {
   display: inline-block;
 }
 
 /* Final.php */
 
-#generalFinal{
-  margin-top:  5%;  
+#generalFinal {
+  margin-top: 5%;
 }
 
-#pFinal{
+#pFinal {
   margin-top: 40px;
   font-size: 30px;
   text-align: center;
 }
 
-#h1Final{
+#h1Final {
   margin-top: 5%;
   text-align: center;
   font-size: 60px;
 }
 
-#h3Final{
+#h3Final {
   font-size: 30px;
   text-align: center;
 }
-#ulFinal{
+
+#ulFinal {
   margin-left: 40%;
   font-size: 25px;
 }
